--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-github-login": "^1.0.3",
+    "react-scripts": "3.2.0",
     "react-social-login": "^3.4.6"
   },
   "scripts": {
